fix layout bug in safari

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -18,7 +18,7 @@ body {
 }
 
 .page-wrapper {
-	height: 100vh;
+	
 	display: flex;
 	flex-direction: column;
 }
